# nephrite

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  whitepaper.md
.github/workflows/: python.yml
docs/: week_1_report.md
nepherite/: __main__.py  base.py  config.py  da_types.py  merkle.py  node.py  puzzle.py  util.py  utils.py
nepherite/algorithms/: PoW.py  __init__.py  blockchain.py  echo_algorithm.py  ring_election.py
nepherite/api/: main.py  serializers.py  utils.py
nepherite/messages/: pull.py  send.py
tests/: Dockerfile  docker-compose-template.yml  docker-compose.template.yml  gen.py  run_blockchain.sh  run_echo.sh  run_election.sh
tests/topologies/: blockchain.yaml  echo.yaml  election.yaml
tests/unit/: test_base.py  test_merkle_tree.py  test_node.py  test_puzzle.py
